<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RentNow 360</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="menu_item_call">Call</string>
    <string name="menu_item_text">Text</string>
    <string name="menu_item_email">Email</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age: </string>
    <string name="gender">Gender</string>
    <string name="what_are_you_sailing">What are you selling</string>
    <string name="can_you_tell_littlebit_more_about_product">Can you tell little bit more about your product?</string>
    <string name="let_the_world_know">Let the world know!!</string>
   <string name="grid_layout_header_text">
    Grid layout with header, spanning 2 columns
  </string>
    <string name="grid_layout_header">Grid layout with header</string>


    <string-array name="amount_type">
        <item>$</item>
        <item>₹</item>
    </string-array>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.></string>
    <string name="you_have_been_loggedout">You have been logged out!</string>
    <string name="log_in_please">Please Login Again!</string>
    <string name="property_type">Property Type</string>
    <string name="upload_images_and_videos">Upload Images and Videos</string>
    <string name="basic">Basic info</string>
    <string name="extra">Extra Info</string>
    <string name="contact_info">Contact Info</string>
    <string name="bed_room">Bed / Beds:</string>
    <string name="bath">Bath:</string>
    <string name="deposit">$ Deposit</string>
    <string name="rentpermonth"> $ Rent / Month</string>
    <string name="square_feet">Square Feet</string>
    <string name="lease_time">Lease Time</string>
    <string name="leasetime">Lease Time</string>
    <string name="studio">Studio</string>
    <string name="one">one</string>
    <string name="publish_propety">Publish Property</string>
    <string name="description">Description</string>
    <string name="not_allowed">Sorry! \n Not Allowed</string>
    <string name="dogs_allowed">Dogs \nAllowed</string>
    <string name="cats_allowed">Cats \nAllowed</string>
    <string name="furnished">Furnished</string>
    <string name="wheelchair_access">Wheelchair \nAccess</string>
    <string name="elevator">Elevator</string>
    <string name="doorman">Doorman</string>
    <string name="fitness_center_gym">Fitness Center /Gym</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="laundry_type">Laundry Type</string>
    <string name="parking_type">Parking Type</string>
    <string name="available_date">Available Date</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="owner">Owner</string>
    <string name="broker">Broker</string>
    <string name="phone_text">Phone Text</string>
    <string name="phone_call">Phone Call</string>
    <string name="pet_rules">Pet Rules:</string>
    <string name="luxuries">Luxuries/Amenities:/</string>
    <string name="save">Save</string>
    <string name="no_fees">No Fee</string>
    <string name="fees">Fee</string>
    <string name="roommate">Roommate</string>
    <string name="upload_property">Upload Property</string>
    <string name="map">Map</string>
    <string name="list">List</string>


</resources>
