<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="?attr/colorPrimary"
            android:text="@string/save"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_first_name_card"
        android:layout_width="match_parent"
        android:theme="@style/armsCheckBox"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/first_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="number"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_last_name_card"
        android:layout_width="match_parent"
        android:theme="@style/armsCheckBox"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/last_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="number"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:theme="@style/armsCheckBox"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_number"
        android:layout_width="match_parent"
        android:theme="@style/armsCheckBox"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="number"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/broker_owner_roommate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <RadioButton
                android:id="@+id/radioOwner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.33"
                android:checked="true"
                android:text="@string/owner"
                android:textSize="@dimen/spinner_title_size"
                android:theme="@style/armsCheckBox" />

            <RadioButton
                android:id="@+id/radioRoommate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.33"
                android:checked="false"
                android:text="@string/roommate"
                android:textSize="@dimen/spinner_title_size"
                android:theme="@style/armsCheckBox" />

            <RadioButton
                android:id="@+id/radioBroker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.33"
                android:checked="false"
                android:text="@string/broker"
                android:textSize="@dimen/spinner_title_size"
                android:theme="@style/armsCheckBox" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/prefered_way_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Prefered way to contact"
        android:textSize="@dimen/spinner_title_size"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/prefered_way_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/email"
        android:theme="@style/armsCheckBox" />

    <CheckBox
        android:id="@+id/prefered_way_phone_text"
        android:layout_width="wrap_content"
        android:checked="true"
        android:layout_height="wrap_content"
        android:text="@string/phone_text"
        android:theme="@style/armsCheckBox" />

    <CheckBox
        android:id="@+id/prefered_way_phone_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/phone_call"
        android:theme="@style/armsCheckBox" />

</LinearLayout>