<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_square_feet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/pet_rules_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pet Rules"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/pet_rules_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/no_pets_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.33"
            android:checked="false"
            android:text="@string/not_allowed"
            android:theme="@style/armsCheckBox" />

        <CheckBox
            android:id="@+id/dogs_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.33"
            android:checked="false"
            android:text="@string/dogs_allowed"
            android:theme="@style/armsCheckBox"

            />

        <CheckBox
            android:id="@+id/cats_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/dogs_checkBox"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.33"
            android:checked="false"
            android:text="@string/cats_allowed"
            android:theme="@style/armsCheckBox" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Luxuries"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/amenities_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2"
        android:orientation="vertical">
        <!--swimming pool, elevator, gym, doorman, -->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/furnished"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.33"
                android:theme="@style/armsCheckBox"
                android:orientation="horizontal"
                android:text="@string/furnished"
                />

            <CheckBox
                android:id="@+id/elevator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.33"
                android:checked="false"
                android:text="@string/elevator"
                android:theme="@style/armsCheckBox"
                />

            <CheckBox
                android:id="@+id/doorman"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.33"
                android:checked="false"
                android:text="@string/doorman"
                android:theme="@style/armsCheckBox"
                />


        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/wheelchair_ccess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:theme="@style/armsCheckBox"
                android:layout_weight="0.33"
                android:orientation="horizontal"
                android:text="@string/wheelchair_access"
                />

            <CheckBox
                android:id="@+id/fitness_center_gym"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.33"
                android:checked="false"
                android:text="@string/fitness_center_gym"
                android:theme="@style/armsCheckBox"
                />

            <CheckBox
                android:id="@+id/swimming_pool"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.33"
                android:checked="false"
                android:text="@string/swimming_pool"
                android:theme="@style/armsCheckBox"
                />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/laundry_type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3"
            android:text="@string/laundry_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/laundry_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/parking_type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/spinner_margin_left_title"
            android:text="@string/parking_type"
            android:textSize="@dimen/spinner_title_size" />

        <Spinner
            android:id="@+id/parking_spinner"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/spinner_margin_left"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.7" />
    </LinearLayout>


</LinearLayout>