<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" >
        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:background="?attr/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save"
              />

    </android.support.v7.widget.Toolbar>

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="match_parent"

        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="2sp"
         android:background="@android:color/black"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:id="@+id/spinner_property_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:prompt="@string/property_type" />

    <RelativeLayout
        android:id="@+id/upload_images_and_videos_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:background="@drawable/layout_border_layout"
        android:layout_weight="0.2"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/upload_images_and_videos_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/spinner_title_size"
            android:text="@string/upload_images_and_videos"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/basic_info_layout"
        android:layout_width="match_parent"
        android:layout_weight="0.2"
        android:layout_height="50dp"
        android:background="@drawable/layout_border_layout"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/basic_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:textSize="@dimen/spinner_title_size"
            android:gravity="center"
            android:text="@string/basic" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/extra_info_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.2"
        android:background="@drawable/layout_border_layout"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/extra_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="12dp"
            android:text="@string/extra" />
        <!--android:textSize="@dimen/spinner_title_size"-->

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/contact_info_layout"
        android:layout_width="match_parent"
        android:layout_weight="0.2"
        android:background="@drawable/layout_border_layout"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contact_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/spinner_title_size"
            android:text="@string/contact_info" />


    </RelativeLayout>
    <!--<Button-->
        <!--android:id="@+id/log_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:text="Log" />-->
</LinearLayout>