<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.firebase.samples.logindemo.auth.ChooserActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <com.google.vr.sdk.widgets.pano.VrPanoramaView
            android:id="@+id/pano_view"

            android:layout_width="match_parent"

            android:scrollbars="none"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/login_with_password"
            android:text="@string/login_with_password"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/login_with_google"
            android:text="@string/login_with_google"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/login_with_facebook"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_with_facebook"
            android:layout_marginBottom="104dp"
            android:layout_above="@+id/login_with_google"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <!--<Button-->
        <!--android:id="@+id/login_with_twitter"-->
        <!--android:text="@string/login_with_twitter"-->
        <!--android:onClick="onClick"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

    <!--<TextView-->
        <!--android:id="@+id/login_status"-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:textAlignment="center"-->
        <!--android:layout_marginTop="20dp" />-->

    <!--<com.facebook.login.widget.LoginButton-->
        <!--android:id="@+id/login_with_facebook"-->
        <!--android:layout_width="match_parent"-->
        <!--android:onClick="onClick"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:text="@string/login_with_facebook" />-->

    <!--<com.google.android.gms.common.SignInButton-->
        <!--android:id="@+id/login_with_google"-->
        <!--android:text="@string/login_with_google"-->
        <!--android:layout_width="match_parent"-->
        <!--android:onClick="onClick"-->
        <!--android:layout_height="wrap_content" />-->

    <!--<Button-->
        <!--android:id="@+id/login_with_twitter"-->
        <!--android:text="@string/login_with_twitter"-->
        <!--android:onClick="onClick"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

    <!--<Button-->
        <!--android:id="@+id/login_with_password"-->
        <!--android:text="@string/login_with_password"-->
        <!--android:layout_width="match_parent"-->
        <!--android:onClick="onClick"-->
        <!--android:layout_height="wrap_content" />-->

    <!--<Button-->
        <!--android:id="@+id/login_anonymously"-->
        <!--android:text="@string/login_anonymously"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

</RelativeLayout>
